# localOCR

./: .env.example  .gitignore  README.md  demo_signature_detection.py  main.py  pyproject.toml  requirements.txt  web.py
.github/: copilot-instructions.md
src/localocr/: __init__.py  ocr.py  signature_detector.py
static/: script.js  style.css
templates/: index.html
tests/: test_imports.py
uploads/: pdf
